# basic_ddd

./: Cargo.toml  README.md
doc/: plan.md
examples/: aggregate.rs  streaming.rs
src/: abstractions.rs  changable.rs  change_abs.rs  changes.rs  contextual.rs  details.rs  historic.rs  identifiable.rs  joins.rs  lib.rs  master.rs  nested_details.rs  owned_collection.rs  primary.rs  result.rs  storage.rs  streamable.rs  streaming.rs  streaming_strategies.rs  test_utils.rs  undoable.rs
src/changes/: mod.rs  record.rs  smalllist.rs  undomanager.rs
src/changes/smalllist/: mod.rs
