[package]
name = "basic_ddd"
version = "0.1.0"
authors = ["sucaba <wareverbohdan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
tcache = { git = "https://github.com/sucaba/tcache" }

